syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/YungBenn/tech-shop-microservices/internal/search/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Search Service";
        version: "1.0.0";
        contact: {
            name: "YungBenn";
            url: "https://github.com/YungBenn/tech-shop-microservices";
            email: "rubenadisuryo22@gmail.com";
        };
    };
};

message ProductData {
    string id = 1;
    string title = 2;
    string price = 3;
    repeated string tag = 4;
    string discount = 5;
    repeated string image = 7;
    string description = 8;
    string created_by = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message CreateIndexRequest {
    string index = 1;
}

message CreateIndexResponse {
    string message = 1;
}

message IndexProductRequest {
    ProductData product = 1;
}

message IndexProductResponse {
    string message = 1;
}

message SearchProductRequest {
    string query = 1;
}

message SearchProductResponse {
    repeated ProductData product = 1;
}

message UpdateIndexProductRequest {
    ProductData product = 1;
}

message UpdateIndexProductResponse {
    string message = 1;
}

// message DeleteProductRequest {
//     string id = 1;
// }

// message DeleteProductResponse {
//     string message = 1;
// }

service SearchService {
    rpc CreateIndex(CreateIndexRequest) returns (CreateIndexResponse) {
        option (google.api.http) = {
            post: "/v1/search/index"
            body: "*"
        };
    }
    rpc IndexProduct(IndexProductRequest) returns (IndexProductResponse) {
        option (google.api.http) = {
            post: "/v1/search/index/product"
            body: "*"
        };
    }
    rpc SearchProduct(SearchProductRequest) returns (SearchProductResponse) {
        option (google.api.http) = {
            post: "/v1/search"
            body: "*"
        };
    }
    rpc UpdateIndexProduct(UpdateIndexProductRequest) returns (UpdateIndexProductResponse) {
        option (google.api.http) = {
            put: "/v1/search"
            body: "*"
        };
    }
    // rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    //     option (google.api.http) = {
    //         delete: "/v1/products/{id}"
    //     };
    // }
}